--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!-- public/index.html -->
 <!DOCTYPE html>
-<html>
+<html ng-app="mean-estudo">
     <head>
+        <meta name="viewport" content="width=device-width"/>
         <meta charset="utf-8"/>
         <title>Bem-Vindo</title>
+
     </head>
-    <body>
+    <body ng-controller="VeiculosController">
         <h1>Bem-Vindo ao BUS System</h1>
+
+        <button ng-click="incrementa()">Novo</button>
+        <p>Veículos cadastrados: {{total}}</p>
+
+        <script src="vendor/angular/angular.js"></script>
+        <script src="vendor/angular-route/angular-route.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/controllers/VeiculosController.js"></script>
     </body>
 </html>
